dig / microsite -- defect fix: Comic-Con gallery slides cause up / down shift of content

--- a/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_galleries_styles.css
+++ b/docroot/sites/usanetwork/themes/aurora_usa/usanetwork_microsite_themes/dig/css/ms_galleries_styles.css
@@ -49,6 +49,10 @@
   padding: 0;
   text-align: left;
   text-shadow: 1px 1px 3px #000;
+  line-height: 1.3em;
+  height: 60px;
+  display: block;
+  overflow-y: auto;
 }
 #microsite #galleries-content .microsite-gallery .description-block p {
   margin: 0;
